# ua-schedule-bot

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
